--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 		<div id="add" class="row">
 			<form id="add_book" class="col-sm-6 col-sm-offset-3">
 				<input type="text" id="book_add_search_text" name="add_text" placeholder="Enter ISBN here...">
-				<input id="add_book_button" class="btn btn-success" type="button" value="Add Book">
+				<input id="add_book_btn" class="btn btn-success" type="button" value="Add Book">
+				<input id="start_cap_btn" class="btn btn-success" type="button" value="Start Cap">
+				<input id="scan_book_btn" class="btn btn-success" type="button" value="Scan ISBN">
 			</form>
 		</div>
 		<div id="search" class="row">
 			<form id="book_search" class="col-sm-6 col-sm-offset-3">
-				<input id="select_title" class="btn btn-primary" type="button" value="By Title">
-				<input id="select_author" class="btn btn-primary" type="button" value="By Author">
 				<input type="text" id="book_search_text" name="search_text" placeholder="Search here...">
 			</form>
 		</div>
@@ -29,8 +29,13 @@
 			</table>
 		</div>
 
+		<video id="barcode_vid" autoplay></video>
+		<img id="barcode_cap" src="">
+		<canvas id="canvas" style="display:none;"></canvas>
+
 		<script src="public/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		<script type="text/javascript" src="public/screencap.js"></script>
 		<script type="text/javascript" src="public/books.js"></script>
 	</body>
 </HTML>
