--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 		<title>Books</title>
 		<link rel="stylesheet" type="text/css" href="public/style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<script src="public/require.js"></script>
+		<script src="public/quagga.min.js"></script>
 	</head>
 	<body>
 		<div id="add" class="row">
@@ -29,13 +31,13 @@
 			</table>
 		</div>
 
-		<video id="barcode_vid" autoplay></video>
+		<video id="barcode_vid" hidden="true" autoplay></video>
 		<img id="barcode_cap" src="">
 		<canvas id="canvas" style="display:none;"></canvas>
 
 		<script src="public/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<script type="text/javascript" src="public/screencap.js"></script>
+		<script type="text/javascript" src="public/quagga_cap.js"></script>
 		<script type="text/javascript" src="public/books.js"></script>
 	</body>
 </HTML>
